<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    card_view:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_slettKnapp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="7dp"
                android:contentDescription="@string/dette_er_en_knapp_som_sletter_lagd_alarm"
                android:src="@drawable/ic_delete" />

            <ImageView
                android:id="@+id/img_endreKnappen"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="7dp"
                android:contentDescription="@string/dette_er_en_knapp_som_sletter_lagd_alarm"
                android:src="@drawable/ic_mode_edit" />
        </LinearLayout>

        <TextView
            android:id="@+id/alarm_navn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="20dp"
            android:text="@string/dummy_text"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/alarm_tid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/_10_40"
            android:textSize="50sp" />

    </LinearLayout>

</android.support.v7.widget.CardView>